[gd_scene load_steps=17 format=3 uid="uid://d2q3bu7sja4rq"]

[ext_resource type="Script" path="res://Scripts/mainGame.gd" id="1_f3i7g"]
[ext_resource type="Texture2D" uid="uid://qtsgbe1enwe5" path="res://Assets/Tileset/placeholderTiles.png" id="2_15wk7"]
[ext_resource type="Texture2D" uid="uid://pwdp1cfqntqq" path="res://Assets/Buildings/placeholderBuildings.png" id="3_f8beg"]
[ext_resource type="FontFile" uid="uid://c34tphc5yjox8" path="res://Pixels.ttf" id="4_8afxh"]
[ext_resource type="Texture2D" uid="uid://gjnx2jrrqhsd" path="res://Assets/basic.png" id="4_kmusg"]
[ext_resource type="Script" path="res://Scenes/tilemap.gd" id="4_l2bqy"]
[ext_resource type="Script" path="res://Scenes/Camera2D.gd" id="5_5u2sc"]
[ext_resource type="Texture2D" uid="uid://djsq7gr2fpm16" path="res://Resources GUI - Game/Energy Count GUI.png" id="6_5mxdx"]
[ext_resource type="Texture2D" uid="uid://djff384audvts" path="res://Resources GUI - Game/Water Count GUI.png" id="8_tb336"]
[ext_resource type="Texture2D" uid="uid://bdx6fhw5pwlj" path="res://Resources GUI - Game/Food Count GUI.png" id="9_eh0qx"]
[ext_resource type="Texture2D" uid="uid://cbkmciaha7qwb" path="res://Resources GUI - Game/Material Count GUI.png" id="10_w4ww2"]
[ext_resource type="Texture2D" uid="uid://cxxsbkm3blkfb" path="res://Resources GUI - Game/Population Count GUI.png" id="11_qmdp4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_obi1j"]
texture = ExtResource("2_15wk7")
texture_region_size = Vector2i(32, 32)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/0/custom_data_1 = "default"
0:0/0/custom_data_2 = true
2:0/0 = 0
2:0/0/custom_data_1 = "metal"
2:0/0/custom_data_2 = true
3:0/0 = 0
3:0/0/custom_data_1 = "oil"
3:0/0/custom_data_2 = true
4:0/0 = 0
4:0/0/custom_data_1 = "river"
5:0/0 = 0
5:0/0/custom_data_1 = "mountain"
1:0/0 = 0
1:0/0/custom_data_1 = "ice"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_07coa"]
texture = ExtResource("3_f8beg")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 9)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, 9)
1:0/0/custom_data_0 = "matsMetal"
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, 9)
2:0/0/custom_data_0 = "matsOil"
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, 9)
3:0/0/custom_data_0 = "energy"
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, 9)
4:0/0/custom_data_0 = "water"
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, 9)
5:0/0/custom_data_0 = "population"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v01hg"]
texture = ExtResource("4_kmusg")
texture_region_size = Vector2i(32, 16)
0:0/size_in_atlas = Vector2i(1, 2)
0:0/0 = 0
0:0/0/custom_data_1 = "default"

[sub_resource type="TileSet" id="TileSet_q7yav"]
tile_shape = 1
tile_layout = 4
tile_size = Vector2i(32, 16)
custom_data_layer_0/name = "buildingType"
custom_data_layer_0/type = 4
custom_data_layer_1/name = "tileType"
custom_data_layer_1/type = 4
custom_data_layer_2/name = "canPlaceBuilding"
custom_data_layer_2/type = 1
sources/1 = SubResource("TileSetAtlasSource_07coa")
sources/0 = SubResource("TileSetAtlasSource_obi1j")
sources/2 = SubResource("TileSetAtlasSource_v01hg")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_f3i7g")

[node name="tilemap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_q7yav")
format = 2
layer_0/name = "Tiles"
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(327682, 2, 0, 393219, 2, 0, 327683, 2, 0, 262148, 2, 0, 196612, 2, 0, 131077, 2, 0, 65541, 2, 0, -196603, 2, 0, -262139, 2, 0, -327676, 2, 0, -393212, 2, 0, -458749, 2, 0, -524285, 2, 0, -327679, 2, 0, -196607, 2, 0, -131072, 2, 0, -196608, 2, 0, -65537, 2, 0, -196610, 0, 0, -393220, 2, 0, -458756, 2, 0, -524292, 2, 0, -589827, 2, 0, -655363, 2, 0, -720898, 2, 0, -589822, 2, 0, -720895, 2, 0, -655358, 2, 0, -786431, 2, 0, -917504, 2, 0, -851968, 2, 0, -917505, 2, 0, -851969, 2, 0, -786434, 2, 0, 131070, 2, 0, 262141, 2, 0, 327677, 2, 0, 393212, 2, 0, -393221, 2, 0, -327685, 2, 0, -262150, 2, 0, -196614, 2, 0, -131079, 2, 0, -65543, 2, 0, 131065, 2, 0, 262138, 2, 0, 327675, 2, 0, 393211, 2, 0, 458748, 2, 0, 524284, 2, 0, 655357, 2, 0, 720894, 2, 0, 458754, 2, 0, 524290, 2, 0, 589825, 2, 0, 655361, 2, 0, 720896, 2, 0, 786432, 2, 0, 917503, 2, 0, 655358, 2, 0, 262145, 2, 0, 262142, 2, 0, 327678, 2, 0, 393213, 2, 0, 458749, 2, 0, 524285, 2, 0, 458750, 2, 0, 393214, 2, 0, 327679, 2, 0, 262144, 2, 0, 393215, 2, 0, 458751, 2, 0, 589822, 2, 0, 589823, 2, 0, 524287, 2, 0, 393216, 2, 0, 327680, 2, 0, 393218, 2, 0, 458753, 2, 0, 524289, 2, 0, 655359, 2, 0, 720895, 2, 0, -327677, 2, 0, -393213, 2, 0, -327678, 2, 0, -196606, 2, 0, -262141, 2, 0, 1, 2, 0, -131068, 2, 0, -196604, 2, 0, -131067, 2, 0, -65532, 2, 0, 4, 2, 0, 262147, 2, 0, 196611, 2, 0, 131076, 2, 0, 5, 2, 0, -65531, 2, 0, -589824, 2, 0, -655359, 2, 0, -720896, 2, 0, -786432, 2, 0, -786433, 2, 0, -720897, 2, 0, -655362, 2, 0, -589826, 2, 0, -524291, 2, 0, -458755, 2, 0, -458754, 2, 0, -524290, 2, 0, -589825, 2, 0, -655361, 2, 0, -655360, 2, 0, -262146, 0, 0, -327681, 0, 0, -393217, 0, 0, -524286, 2, 0, -458751, 2, 0, -393215, 2, 0, -327680, 2, 0, -262144, 2, 0, -131073, 2, 0, -131075, 0, 0, -327684, 2, 0, -262149, 2, 0, -196613, 2, 0, -131078, 2, 0, -65542, 2, 0, -6, 2, 0, -65541, 2, 0, -5, 2, 0, 65531, 2, 0, 196603, 2, 0, 65532, 2, 0, -65539, 0, 0, 131068, 2, 0, 196604, 2, 0, 262139, 2, 0, 327676, 2, 0, 262140, 2, 0, 131069, 2, 0, -2, 2, 0, -131077, 2, 0, -196612, 2, 0, -262148, 2, 0, -327683, 2, 0, -393219, 2, 0, 65540, 2, 0, -65534, 2, 0, -131070, 2, 0, -262142, 2, 0, -262143, 2, 0, -458750, 2, 0, -393214, 2, 0, -589823, 2, 0, -524288, 2, 0, -4, 2, 0, -1, 2, 0, 65535, 2, 0, 0, 2, 0, 65534, 2, 0, 131071, 2, 0, 65536, 2, 0, 65537, 2, 0, 131073, 2, 0, 131072, 2, 0, 196607, 2, 0, 262143, 2, 0, 196608, 2, 0, 196609, 2, 0, 196606, 2, 0, 196605, 2, 0, -7, 2, 0, 65529, 2, 0, 65530, 2, 0, 131067, 2, 0, 131066, 2, 0, 196602, 2, 0, 196601, 2, 0, 65528, 2, 0, -196602, 2, 0, -131066, 2, 0, -65530, 2, 0, 6, 2, 0, 65542, 2, 0, 524286, 2, 0, -524289, 131072, 0, -458753, 131072, 0, -524287, 131072, 0, -458752, 131072, 0, -393216, 131072, 0, -262145, 131072, 0, -196609, 131072, 0, -393218, 131072, 0, -327682, 131072, 0, -262147, 131072, 0, -196611, 131072, 0, -131074, 131072, 0, -65538, 131072, 0, -131076, 131072, 0, -65540, 131072, 0, -3, 131072, 0, 65533, 131072, 0, 786431, 262144, 0, 851967, 262144, 0, 655360, 262144, 0, 589824, 262144, 0, 524288, 262144, 0, 458752, 262144, 0, 393217, 262144, 0, 327681, 262144, 0, 262146, 262144, 0, 196610, 262144, 0, 131074, 262144, 0, 65538, 262144, 0, 2, 262144, 0, 3, 262144, 0, -65533, 262144, 0, -131069, 262144, 0, -196605, 262144, 0, 65539, 262144, 0, 131075, 262144, 0, -262140, 262144, 0, -131071, 196608, 0, -65535, 196608, 0, -65536, 196608, 0, 786430, 2, 0, 851966, 2, 0, -851967, 2, 0, -851966, 2, 0, -786430, 2, 0, -720894, 2, 0, -720893, 2, 0, -655357, 2, 0, -589821, 2, 0, -589820, 2, 0, -327675, 2, 0, -262138, 2, 0, -196601, 2, 0, -131065, 2, 0, -65529, 2, 0, 7, 2, 0, 131078, 2, 0, 196613, 2, 0, 327684, 2, 0, 458755, 2, 0, -786429, 2, 0, -720892, 2, 0, -655356, 2, 0, -589819, 2, 0, -524283, 2, 0, -524282, 2, 0, -458746, 2, 0, -393210, 2, 0, -393209, 2, 0, -327673, 2, 0, -327672, 2, 0, -262136, 2, 0, -196600, 2, 0, -131063, 2, 0, -65527, 2, 0, -65528, 2, 0, 8, 2, 0, 65544, 2, 0, 131080, 2, 0, 131079, 2, 0, 196615, 2, 0, 196614, 2, 0, 262150, 2, 0, 327686, 2, 0, 327685, 2, 0, 393221, 2, 0, 393220, 2, 0, 458756, 2, 0, 524291, 2, 0, 589826, 2, 0, 655362, 2, 0, 720897, 2, 0, 589827, 2, 0, 524292, 2, 0, 262149, 2, 0, 65543, 2, 0, -131064, 2, 0, -262137, 2, 0, -327674, 2, 0, -458748, 2, 0, -458747, 2, 0, -393211, 2, 0, -524284, 2, 0, -851970, 2, 0, -851971, 2, 0, -786435, 2, 0, -720899, 2, 0, -720900, 2, 0, -655364, 2, 0, -655365, 2, 0, -589829, 2, 0, -589830, 2, 0, -524294, 2, 0, -524295, 2, 0, -458759, 2, 0, -393223, 2, 0, -393224, 2, 0, -327688, 2, 0, -327689, 2, 0, -262153, 2, 0, -262154, 2, 0, -196618, 2, 0, -131082, 2, 0, -131083, 2, 0, -65547, 2, 0, -11, 2, 0, 65525, 2, 0, 131061, 2, 0, 196598, 2, 0, 262135, 2, 0, 327671, 2, 0, 327672, 2, 0, 393208, 2, 0, 393209, 2, 0, 458745, 2, 0, 458746, 2, 0, 524282, 2, 0, 524283, 2, 0, 589819, 2, 0, 589820, 2, 0, 655356, 2, 0, 720893, 2, 0, -589828, 2, 0, -524293, 2, 0, -458757, 2, 0, -393222, 2, 0, -327686, 2, 0, -327687, 2, 0, -262151, 2, 0, -196615, 2, 0, -196616, 2, 0, -131080, 2, 0, -131081, 2, 0, -65545, 2, 0, -65546, 2, 0, -10, 2, 0, 65526, 2, 0, 131062, 2, 0, 65527, 2, 0, -9, 2, 0, -8, 2, 0, -65544, 2, 0, -262152, 2, 0, -196617, 2, 0, -458758, 2, 0, 131064, 2, 0, 196600, 2, 0, 131063, 2, 0, 262137, 2, 0, 196599, 2, 0, 262136, 2, 0, 327673, 2, 0, 327674, 2, 0, 393210, 2, 0, 458747, 2, 0, 589821, 2, 0, -1376255, 327680, 0, -1310718, 327680, 0, -1245181, 327680, 0, -1179644, 327680, 0, -1114107, 327680, 0, -1048570, 327680, 0, -983033, 327680, 0, -917496, 327680, 0, -851959, 327680, 0, -786422, 327680, 0, -720885, 327680, 0, -655348, 327680, 0, -589811, 327680, 0, -524274, 327680, 0, -458737, 327680, 0, -393200, 327680, 0, -327663, 327680, 0, -262126, 327680, 0, -196589, 327680, 0, -131052, 327680, 0, -65516, 327680, 0, -65517, 327680, 0, 19, 327680, 0, 18, 327680, 0, 65554, 327680, 0, 65553, 327680, 0, 131089, 327680, 0, 131088, 327680, 0, 196624, 327680, 0, 196623, 327680, 0, 262159, 327680, 0, 262158, 327680, 0, 327694, 327680, 0, 327693, 327680, 0, 393229, 327680, 0, 393228, 327680, 0, 458764, 327680, 0, 458763, 327680, 0, 524299, 327680, 0, 524298, 327680, 0, 589834, 327680, 0, 589833, 327680, 0, 655369, 327680, 0, 655368, 327680, 0, 720904, 327680, 0, 720903, 327680, 0, 786439, 327680, 0, 786438, 327680, 0, 851974, 327680, 0, 851973, 327680, 0, 917509, 327680, 0, 917508, 327680, 0, 983044, 327680, 0, 983043, 327680, 0, 1048579, 327680, 0, 1048578, 327680, 0, 1114114, 327680, 0, 1114113, 327680, 0, 1179649, 327680, 0, 1179648, 327680, 0, 1245184, 327680, 0, 1310719, 327680, 0, 1376255, 327680, 0, 1310718, 327680, 0, 1245181, 327680, 0, 1179644, 327680, 0, 1114107, 327680, 0, 1048570, 327680, 0, 983033, 327680, 0, 917496, 327680, 0, 851959, 327680, 0, 786422, 327680, 0, 720885, 327680, 0, 655348, 327680, 0, 589811, 327680, 0, 524274, 327680, 0, 458737, 327680, 0, 393200, 327680, 0, 327663, 327680, 0, 262126, 327680, 0, 196589, 327680, 0, 131052, 327680, 0, 65515, 327680, 0, -21, 327680, 0, -20, 327680, 0, -65556, 327680, 0, -65555, 327680, 0, -131091, 327680, 0, -131090, 327680, 0, -196626, 327680, 0, -196625, 327680, 0, -262161, 327680, 0, -262160, 327680, 0, -327696, 327680, 0, -327695, 327680, 0, -393231, 327680, 0, -393230, 327680, 0, -458766, 327680, 0, -458765, 327680, 0, -524301, 327680, 0, -524300, 327680, 0, -589836, 327680, 0, -589835, 327680, 0, -655371, 327680, 0, -655370, 327680, 0, -720906, 327680, 0, -720905, 327680, 0, -786441, 327680, 0, -786440, 327680, 0, -851976, 327680, 0, -851975, 327680, 0, -917511, 327680, 0, -917510, 327680, 0, -983046, 327680, 0, -983045, 327680, 0, -1048581, 327680, 0, -1048580, 327680, 0, -1114116, 327680, 0, -1114115, 327680, 0, -1179651, 327680, 0, -1179650, 327680, 0, -1245186, 327680, 0, -1245185, 327680, 0, -1310721, 327680, 0, -1376256, 327680, 0, -131086, 2, 0, -131085, 2, 0, -131084, 2, 0, -196620, 2, 0, -196619, 2, 0, -262155, 2, 0, -327691, 2, 0, -327690, 2, 0, -393226, 2, 0, -393225, 2, 0, -458761, 2, 0, -458760, 2, 0, -524296, 2, 0, -589832, 2, 0, -589831, 2, 0, -655367, 2, 0, -655366, 2, 0, -720902, 2, 0, -720901, 2, 0, -786437, 2, 0, -786436, 2, 0, -851972, 2, 0, -917508, 2, 0, -917507, 2, 0, -917506, 2, 0, -983042, 2, 0, -983041, 2, 0, -1048576, 2, 0, -1048575, 2, 0, -1048574, 2, 0, -1048573, 2, 0, -1048572, 2, 0, -1048571, 2, 0, -983035, 2, 0, -983034, 2, 0, -917498, 2, 0, -917497, 2, 0, -851961, 2, 0, -851960, 2, 0, -786424, 2, 0, -786423, 2, 0, -720887, 2, 0, -720886, 2, 0, -655350, 2, 0, -655349, 2, 0, -589813, 2, 0, -589812, 2, 0, -524276, 2, 0, -524275, 2, 0, -458739, 2, 0, -458738, 2, 0, -393202, 2, 0, -393201, 2, 0, -327665, 2, 0, -327664, 2, 0, -262128, 2, 0, -262127, 2, 0, -196591, 2, 0, -196590, 2, 0, -131054, 2, 0, -131053, 2, 0, -131055, 2, 0, -131056, 2, 0, -196592, 2, 0, -196593, 2, 0, -262129, 2, 0, -262130, 2, 0, -327666, 2, 0, -327667, 2, 0, -393203, 2, 0, -393204, 2, 0, -458740, 2, 0, -458741, 2, 0, -524277, 2, 0, -524278, 2, 0, -589814, 2, 0, -589815, 2, 0, -655351, 2, 0, -655352, 2, 0, -720888, 2, 0, -720889, 2, 0, -786425, 2, 0, -786426, 2, 0, -851962, 2, 0, -851963, 2, 0, -917499, 2, 0, -917500, 2, 0, -983036, 2, 0, -983037, 2, 0, -983038, 2, 0, -983039, 2, 0, -983040, 2, 0, -917503, 2, 0, -917502, 2, 0, -917501, 2, 0, -851965, 2, 0, -851964, 2, 0, -786428, 2, 0, -786427, 2, 0, -720891, 2, 0, -720890, 2, 0, -655354, 2, 0, -655353, 2, 0, -589817, 2, 0, -589816, 2, 0, -524280, 2, 0, -524279, 2, 0, -458743, 2, 0, -458742, 2, 0, -393206, 2, 0, -393205, 2, 0, -327669, 2, 0, -327668, 2, 0, -262132, 2, 0, -262131, 2, 0, -196595, 2, 0, -196594, 2, 0, -131058, 2, 0, -131057, 2, 0, -65521, 2, 0, -65520, 2, 0, -65519, 2, 0, -65518, 2, 0, 17, 2, 0, 16, 2, 0, 15, 2, 0, 14, 2, 0, -65522, 2, 0, -65523, 2, 0, -131059, 2, 0, -131060, 2, 0, -196596, 2, 0, -196597, 2, 0, -262133, 2, 0, -262134, 2, 0, -327670, 2, 0, -327671, 2, 0, -393207, 2, 0, -393208, 2, 0, -458744, 2, 0, -458745, 2, 0, -524281, 2, 0, -262135, 2, 0, -196599, 2, 0, -196598, 2, 0, -131062, 2, 0, -131061, 2, 0, -65525, 2, 0, -65524, 2, 0, 12, 2, 0, 13, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 65552, 2, 0, 131087, 2, 0, 131086, 2, 0, 131085, 2, 0, 131084, 2, 0, 65548, 2, 0, 65547, 2, 0, 11, 2, 0, 10, 2, 0, -65526, 2, 0, 9, 2, 0, 65545, 2, 0, 65546, 2, 0, 131082, 2, 0, 131083, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 262157, 2, 0, 262156, 2, 0, 262155, 2, 0, 262154, 2, 0, 196618, 2, 0, 196617, 2, 0, 131081, 2, 0, 196616, 2, 0, 262152, 2, 0, 262153, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 393227, 2, 0, 393226, 2, 0, 393225, 2, 0, 393224, 2, 0, 327688, 2, 0, 327687, 2, 0, 262151, 2, 0, 393223, 2, 0, 393222, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 524297, 2, 0, 524296, 2, 0, 524295, 2, 0, 524294, 2, 0, 524293, 2, 0, 458757, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 655367, 2, 0, 655366, 2, 0, 655365, 2, 0, 655364, 2, 0, 589828, 2, 0, 655363, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 786437, 2, 0, 786436, 2, 0, 786435, 2, 0, 786434, 2, 0, 720898, 2, 0, 786433, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 917507, 2, 0, 917506, 2, 0, 917505, 2, 0, 917504, 2, 0, 851968, 2, 0, 983039, 2, 0, 983038, 2, 0, 917502, 2, 0, 917501, 2, 0, 851965, 2, 0, 786429, 2, 0, 786428, 2, 0, 720892, 2, 0, 720891, 2, 0, 655355, 2, 0, 655354, 2, 0, 589818, 2, 0, 589817, 2, 0, 524281, 2, 0, 524280, 2, 0, 458744, 2, 0, 458743, 2, 0, 393207, 2, 0, 393206, 2, 0, 327670, 2, 0, 262134, 2, 0, 262133, 2, 0, 196597, 2, 0, 196596, 2, 0, 131060, 2, 0, 65524, 2, 0, -12, 2, 0, -65548, 2, 0, -65549, 2, 0, -65550, 2, 0, -65551, 2, 0, -131087, 2, 0, -196623, 2, 0, -196622, 2, 0, -196621, 2, 0, -262157, 2, 0, -262156, 2, 0, -327692, 2, 0, -393228, 2, 0, -393227, 2, 0, -458763, 2, 0, -458762, 2, 0, -524298, 2, 0, -524297, 2, 0, -589833, 2, 0, -655369, 2, 0, -655368, 2, 0, -720904, 2, 0, -720903, 2, 0, -786439, 2, 0, -786438, 2, 0, -851974, 2, 0, -851973, 2, 0, -917509, 2, 0, -589834, 2, 0, -524299, 2, 0, -458764, 2, 0, -393229, 2, 0, -327693, 2, 0, -327694, 2, 0, -262158, 2, 0, -262159, 2, 0, -196624, 2, 0, -131088, 2, 0, -131089, 2, 0, -65553, 2, 0, -65552, 2, 0, -16, 2, 0, -15, 2, 0, -14, 2, 0, -13, 2, 0, 65523, 2, 0, 65522, 2, 0, 65521, 2, 0, 65520, 2, 0, 65519, 2, 0, -17, 2, 0, -18, 2, 0, -65554, 2, 0, -19, 2, 0, 65517, 2, 0, 65518, 2, 0, 131054, 2, 0, 131055, 2, 0, 131056, 2, 0, 131057, 2, 0, 131058, 2, 0, 131059, 2, 0, 196595, 2, 0, 196594, 2, 0, 196593, 2, 0, 196592, 2, 0, 196591, 2, 0, 196590, 2, 0, 262127, 2, 0, 262128, 2, 0, 262129, 2, 0, 262130, 2, 0, 262131, 2, 0, 262132, 2, 0, 327668, 2, 0, 327669, 2, 0, 393205, 2, 0, 393204, 2, 0, 393203, 2, 0, 327667, 2, 0, 327666, 2, 0, 327665, 2, 0, 327664, 2, 0, 393201, 2, 0, 393202, 2, 0, 458738, 2, 0, 458739, 2, 0, 458740, 2, 0, 458741, 2, 0, 458742, 2, 0, 524278, 2, 0, 524279, 2, 0, 589815, 2, 0, 589816, 2, 0, 655352, 2, 0, 655353, 2, 0, 720889, 2, 0, 720890, 2, 0, 786426, 2, 0, 786427, 2, 0, 851963, 2, 0, 851964, 2, 0, 917500, 2, 0, 917499, 2, 0, 917498, 2, 0, 851962, 2, 0, 851961, 2, 0, 786425, 2, 0, 786424, 2, 0, 720888, 2, 0, 720887, 2, 0, 655351, 2, 0, 655350, 2, 0, 589814, 2, 0, 589813, 2, 0, 524277, 2, 0, 524276, 2, 0, 524275, 2, 0, 589812, 2, 0, 655349, 2, 0, 720886, 2, 0, 786423, 2, 0, 851960, 2, 0, 917497, 2, 0, 983034, 2, 0, 983035, 2, 0, 983036, 2, 0, 983037, 2, 0, 1048573, 2, 0, 1048574, 2, 0, 1048575, 2, 0, 983040, 2, 0, 983041, 2, 0, 983042, 2, 0, 1048577, 2, 0, 1048576, 2, 0, 1114111, 2, 0, 1114110, 2, 0, 1114109, 2, 0, 1114108, 2, 0, 1048572, 2, 0, 1048571, 2, 0, 1179645, 2, 0, 1179646, 2, 0, 1179647, 2, 0, 1114112, 2, 0, 1245183, 2, 0, 1245182, 2, 0, 131053, 2, 0, 65516, 2, 0, -589818, 2, 0, -655355, 2, 0, -1114108, 2, 0, -1114109, 2, 0, -1179645, 2, 0, -1179646, 2, 0, -1245182, 2, 0, -1245183, 2, 0, -1310719, 2, 0, -1310720, 2, 0, -1245184, 2, 0, -1179649, 2, 0, -1114113, 2, 0, -1179648, 2, 0, -1179647, 2, 0, -1114111, 2, 0, -1114110, 2, 0, -1114112, 2, 0, -1048577, 2, 0, -1048578, 2, 0, -1114114, 2, 0, -1048579, 2, 0, -983043, 2, 0, -983044, 2, 0)
layer_1/name = "Buildings"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-1, 131073, 0)
script = ExtResource("4_l2bqy")

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.875, 1.875)
script = ExtResource("5_5u2sc")

[node name="waterButton" type="Button" parent="."]
offset_left = -275.0
offset_top = 124.0
offset_right = -171.0
offset_bottom = 161.0
text = "Water"

[node name="energyButton" type="Button" parent="."]
offset_left = -155.0
offset_top = 125.0
offset_right = -52.0
offset_bottom = 162.0
text = "Energy"

[node name="foodButton" type="Button" parent="."]
offset_left = -35.0
offset_top = 122.0
offset_right = 77.0
offset_bottom = 158.0
text = "Food"

[node name="materialButton" type="Button" parent="."]
offset_left = 94.0
offset_top = 119.0
offset_right = 175.0
offset_bottom = 158.0
text = "Material"

[node name="populationButton" type="Button" parent="."]
offset_left = 187.0
offset_top = 120.0
offset_right = 280.0
offset_bottom = 151.0
text = "Population"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(237, -6)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(159.793, -22.2864)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(193, -22)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(209, -15)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(177, -47)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(193, -38)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(145, -30)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(129, -54)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(144, -46)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(113, -78)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(129, -71)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(161, -70)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D12" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(177, -62)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D13" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(145, -94)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D14" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(161, -86)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D15" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(145, -111)
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D16" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(97, -106)
rotation = -0.00898179
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="CollisionPolygon2D17" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(113, -98)
rotation = -0.00898179
scale = Vector2(0.96875, 0.959559)
polygon = PackedVector2Array(-493, 45, -477, 53, -493, 62, -509, 54)

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -305.0
offset_top = -177.0
offset_right = 293.0
offset_bottom = -116.0

[node name="Energy UI" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 0
offset_left = 46.0
offset_top = -116.0
offset_right = 712.0
offset_bottom = 259.0
texture = ExtResource("6_5mxdx")

[node name="EnergyCont" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 358.0
offset_right = 398.0
offset_bottom = 40.0

[node name="Energy" type="Label" parent="Control/EnergyCont"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8afxh")
theme_override_font_sizes/font_size = 16
text = "Energy
"

[node name="EnergyVal" type="Label" parent="Control/EnergyCont/Energy"]
layout_mode = 2
offset_top = 12.0
offset_right = 23.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("4_8afxh")
theme_override_font_sizes/font_size = 16
text = "50
"

[node name="Water UI" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
offset_left = -77.0
offset_top = -181.0
offset_right = 589.0
offset_bottom = 194.0
texture = ExtResource("8_tb336")

[node name="WaterCont" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 239.0
offset_top = 3.0
offset_right = 279.0
offset_bottom = 43.0

[node name="Water" type="Label" parent="Control/WaterCont"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8afxh")
theme_override_font_sizes/font_size = 16
text = "Water
"

[node name="WaterVal" type="Label" parent="Control/WaterCont/Water"]
layout_mode = 2
offset_top = 11.0
offset_right = 23.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("4_8afxh")
theme_override_font_sizes/font_size = 16
text = "50

"

[node name="Food UI" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 0
offset_left = -190.0
offset_top = -112.0
offset_right = 476.0
offset_bottom = 263.0
texture = ExtResource("9_eh0qx")

[node name="FoodCont" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 132.0
offset_top = 8.0
offset_right = 172.0
offset_bottom = 48.0

[node name="Food" type="Label" parent="Control/FoodCont"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8afxh")
theme_override_font_sizes/font_size = 16
text = "Food
"

[node name="FoodVal" type="Label" parent="Control/FoodCont/Food"]
layout_mode = 2
offset_top = 12.0
offset_right = 23.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("4_8afxh")
theme_override_font_sizes/font_size = 16
text = "50
"

[node name="Material UI" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 0
offset_left = 175.0
offset_top = -115.0
offset_right = 841.0
offset_bottom = 260.0
texture = ExtResource("10_w4ww2")

[node name="MatCont" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 502.0
offset_top = 1.0
offset_right = 542.0
offset_bottom = 41.0

[node name="Mat" type="Label" parent="Control/MatCont"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8afxh")
theme_override_font_sizes/font_size = 16
text = "Materials
"

[node name="MatVal" type="Label" parent="Control/MatCont/Mat"]
layout_mode = 2
offset_top = 13.0
offset_right = 23.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("4_8afxh")
theme_override_font_sizes/font_size = 16
text = "50

"

[node name="Population UI" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
offset_left = -163.0
offset_top = -96.0
offset_right = 237.0
offset_bottom = 204.0
texture = ExtResource("11_qmdp4")
expand_mode = 1
stretch_mode = 5

[node name="PopCont" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 14.0
offset_top = -5.0
offset_right = 59.0
offset_bottom = 35.0

[node name="Pop" type="Label" parent="Control/PopCont"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8afxh")
theme_override_font_sizes/font_size = 16
text = "Population
"

[node name="PopVal" type="Label" parent="Control/PopCont/Pop"]
layout_mode = 2
offset_left = 16.0
offset_top = 14.0
offset_right = 39.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("4_8afxh")
theme_override_font_sizes/font_size = 16
text = "10
"

[connection signal="timeout" from="Timer" to="." method="_on_ResourceTimer_timeout"]
[connection signal="pressed" from="waterButton" to="." method="_on_water_button_pressed"]
[connection signal="pressed" from="energyButton" to="." method="_on_energy_button_pressed"]
[connection signal="pressed" from="foodButton" to="." method="_on_food_button_pressed"]
[connection signal="pressed" from="materialButton" to="." method="_on_material_button_pressed"]
[connection signal="pressed" from="populationButton" to="." method="_on_population_button_pressed"]
